Refactor to model-agnostic architecture with enhanced UI
- Add support for multiple LLM providers (AWS Bedrock, OpenAI, Anthropic)
- Implement contextual compression with top-6 chunk retrieval
- Add intelligent reranking for AWS/PII/DDD-related content
- Enhance UI with Evidence section and confidence scores
- Add 'Refresh Knowledge Base' button for live doc updates
- Update README with configuration guide for all providers
- Add .env.example with provider-specific templates
- Display active provider and model in sidebar dynamically

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,10 @@ pypdf
 python-dotenv
 faiss-cpu
 sentence-transformers
+
+# Optional: Install based on your MODEL_PROVIDER
+# For OpenAI (MODEL_PROVIDER=openai):
+# openai
+
+# For Anthropic (MODEL_PROVIDER=anthropic):
+# anthropic
