feat: Add Confluence space sync with hybrid approach - confluence_sync.py for bulk page fetching with label filtering - ingest_from_confluence() to merge Confluence pages with FAISS - UI sync button with space/label configuration - Config support for CONFLUENCE_SPACE_KEY and CONFLUENCE_LABELS

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,14 @@
 # ===================================================================
+# IMPORTANT: Organization Configuration
+# ===================================================================
+# Copy config.env.example to config.env and customize for your organization
+# See config.env for organization-specific settings like:
+# - Organization name and branding
+# - Priority ADRs
+# - Reranking keywords
+# - Audit aspects
+
+# ===================================================================
 # LLM Provider Configuration (Model-Agnostic)
 # ===================================================================
 # Choose your LLM provider: 'bedrock', 'openai', or 'anthropic'
@@ -27,3 +37,14 @@ AWS_REGION=us-east-1
 # Anthropic Configuration (Required if MODEL_PROVIDER=anthropic)
 # ===================================================================
 # ANTHROPIC_API_KEY=sk-ant-your-api-key-here
+
+# ===================================================================
+# Confluence Integration (Optional - for fetching design docs)
+# ===================================================================
+# CONFLUENCE_EMAIL=your-email@company.com
+# CONFLUENCE_API_TOKEN=your-confluence-api-token-here
+# 
+# To get API token:
+# 1. Go to https://id.atlassian.com/manage-profile/security/api-tokens
+# 2. Create an API token
+# 3. Copy and paste it above
