--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ pypdf
 python-dotenv
 faiss-cpu
 sentence-transformers
+beautifulsoup4
+requests
 
 # Optional: Install based on your MODEL_PROVIDER
 # For OpenAI (MODEL_PROVIDER=openai):
