feat: Model-agnostic embeddings with Bedrock as default
- Created embeddings.py module with multi-provider support
- Support for Bedrock (Titan), OpenAI, and HuggingFace embeddings
- Updated .env.example with EMBEDDING_PROVIDER and EMBEDDING_MODEL
- Fixed langchain.schema import to langchain_core.documents
- Re-ingested knowledge base with Bedrock embeddings (1024-dim)
- Added test_embeddings.py for validation
- Removes HuggingFace network dependency for corporate environments

--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,22 @@ AWS_REGION=us-east-1
 # ANTHROPIC_API_KEY=sk-ant-your-api-key-here
 
 # ===================================================================
+# Embeddings Configuration (for FAISS Vector Store)
+# ===================================================================
+# Choose embeddings provider: 'bedrock', 'openai', or 'huggingface'
+# Bedrock: No network dependency, unified AWS stack, enterprise-ready
+# OpenAI: High quality, requires API key
+# HuggingFace: Free, local, but may be blocked in corporate networks
+EMBEDDING_PROVIDER=bedrock
+
+# Specify the embeddings model for your chosen provider
+# Examples:
+#   Bedrock: amazon.titan-embed-text-v2:0, cohere.embed-english-v3, cohere.embed-multilingual-v3
+#   OpenAI: text-embedding-3-small, text-embedding-3-large, text-embedding-ada-002
+#   HuggingFace: sentence-transformers/all-MiniLM-L6-v2
+EMBEDDING_MODEL=amazon.titan-embed-text-v2:0
+
+# ===================================================================
 # Confluence Integration (Optional - for fetching design docs)
 # ===================================================================
 # CONFLUENCE_EMAIL=your-email@company.com
