feat: Add OpenWebUI support for corporate proxy scenarios
Problem:
- Many organizations block direct access to Bedrock/OpenAI APIs
- Corporate networks require LLM traffic through approved proxies
- OpenWebUI is commonly used as an internal proxy gateway

Solution:
- Added 'openwebui' as MODEL_PROVIDER option
- Supports OpenWebUI for both LLM and embeddings
- Uses OpenAI-compatible API (OpenWebUI standard)
- Fully configurable via .env (OPENWEBUI_BASE_URL, OPENWEBUI_API_KEY)

Changes:
- brain.py: Added _invoke_openwebui() function
- embeddings.py: Added _get_openwebui_embeddings() function
- .env.example: Added OpenWebUI configuration section
- .env.openwebui.example: Complete example for OpenWebUI users
- README.md: Documented when/why to use OpenWebUI proxy

Use Case:
Set MODEL_PROVIDER=openwebui and OPENWEBUI_BASE_URL to your
internal OpenWebUI instance. Works identical to Bedrock/OpenAI
but routes through corporate proxy. Common in banking, healthcare,
government where external API calls are restricted.

No breaking changes - existing Bedrock/OpenAI/Anthropic configs
continue to work exactly as before.

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@
 # ===================================================================
 # LLM Provider Configuration (Model-Agnostic)
 # ===================================================================
-# Choose your LLM provider: 'bedrock', 'openai', or 'anthropic'
+# Choose your LLM provider: 'bedrock', 'openai', 'anthropic', or 'openwebui'
+# Use 'openwebui' if your organization uses OpenWebUI as a proxy to LLMs
 MODEL_PROVIDER=bedrock
 
 # Specify the model name/ID for your chosen provider
@@ -39,12 +40,27 @@ AWS_REGION=us-east-1
 # ANTHROPIC_API_KEY=sk-ant-your-api-key-here
 
 # ===================================================================
+# OpenWebUI Configuration (Required if MODEL_PROVIDER=openwebui)
+# ===================================================================
+# OpenWebUI is often used as a corporate proxy for LLMs when direct
+# access to Bedrock/OpenAI is restricted by network policies.
+# It provides an OpenAI-compatible API endpoint.
+#
+# OPENWEBUI_BASE_URL=http://your-openwebui-instance:8080/api/v1
+# OPENWEBUI_API_KEY=your-openwebui-api-key
+#
+# Model name should match what's configured in your OpenWebUI instance
+# Example: gpt-4, claude-3-sonnet, deepseek-r1
+# MODEL_NAME=gpt-4
+
+# ===================================================================
 # Embeddings Configuration (for FAISS Vector Store)
 # ===================================================================
-# Choose embeddings provider: 'bedrock', 'openai', or 'huggingface'
+# Choose embeddings provider: 'bedrock', 'openai', 'huggingface', or 'openwebui'
 # Bedrock: No network dependency, unified AWS stack, enterprise-ready
 # OpenAI: High quality, requires API key
 # HuggingFace: Free, local, but may be blocked in corporate networks
+# OpenWebUI: Use when your organization proxies embeddings through OpenWebUI
 EMBEDDING_PROVIDER=bedrock
 
 # Specify the embeddings model for your chosen provider
